crates/keron-lang/tests/corpus/errors/check/coalesce_type_mismatch.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: type mismatch: expected `String`, found `Int`
  --> 1:29
  |
1 | val x: String = env("X") ?? 5
  |                             ^
